# translator-app

./: AGENTS.md  BUILD.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  build-macos.sh  entitlements.plist  forge.config.ts  index-loading.html  index-quick.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vite.renderer.loading.config.ts
assets/: logo.icns
docs/superpowers/plans/: 2026-06-21-phase-0-tauri-scaffold.md  2026-06-21-phase-1-core-backend.md  (+1 more)
src/: app.tsx  index.css  index.tsx  main.ts  preload.ts  renderer-loading.tsx  renderer-quick.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: clipboard.rs  history.rs  improve.rs  macos.rs  mod.rs  models.rs  quick.rs  settings.rs  shortcuts.rs  translate.rs  voice.rs  window.rs
src-tauri/src/services/: mod.rs  permissions.rs  shortcuts.rs
src-tauri/src/services/ai/: gemini.rs  groq.rs  mod.rs  models.rs  prompts.rs
src-tauri/src/services/selection/: capture.rs  clipboard.rs  mod.rs  native_input.rs
src-tauri/src/services/translation/: google.rs  mod.rs
src-tauri/src/stores/: history.rs  settings.rs
src/lib/: bridge-tauri.ts
src/main/: quick-translate-flow.ts  voice-text-flow.ts
src/main/ai/: ai-provider.ts  (+4 more)
src/shared/: ipc-channels.ts  types.ts
src/tests/: ai-service.test.ts  google-translate-provider.test.ts  quick-translate-routing.test.ts  selection-capture-service.test.ts  settings-store.test.ts  shortcut-manager.test.ts
(+31 files in other folders)
